--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,7 @@ jobs:
 
     - name: Update kube config
       run: aws eks update-kubeconfig --name sample
+
+    - name: Deploy nodejs helm chart to EKS
+      run: |
+        helm install nodeapp ./node-app
