--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,6 @@ jobs:
     - name: Update kube config
       run: aws eks update-kubeconfig --name sample
 
+    - name: Deploy nodejs helm chart to EKS
+      run: |
+        helm install nodeapp ./node-app
